--- a/public/netlify.toml
+++ b/public/netlify.toml
@@ -1,8 +1,3 @@
-[build]
-    command = "npm run build"
-    publish = "/build"
-    base = "/"
-
 [[redirects]]
     from = "/home"
     to = "/home"
@@ -25,5 +20,5 @@
 
 [[redirects]]
     from = "/*"
-    to = "/"
+    to = "/index.html"
     status = 200
